apport (1.7-0ubuntu2) UNRELEASED; urgency=low

  * data/general-hooks/ubuntu.py: Detect when a kernel upgrade failure is
    caused by update-grub failing, and file the bug on grub instead of linux

 -- Matt Zimmerman <mdz@ubuntu.com>  Thu, 06 Aug 2009 12:41:32 +0100

apport (1.7-0ubuntu1) karmic; urgency=low

  * New upstream release:
    - Add support for symptoms.
  * debian/control: Recommend apport-symptoms.
  * debian/local/ubuntu-bug: When called without arguments, run in "show
    available symptoms" mode.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 05 Aug 2009 19:32:39 +0100

apport (1.6-0ubuntu3) karmic; urgency=low

  * Merge trunk:
    - apport-gtk: Fix ordering of choices
    - bin/package_hook: Fix crash for subdirectories in log dir. (LP: #332350)
    - doc/package-hooks.txt: Document allowed chars in report keys.
    - Show precise error message for damaged reports.
  * ubuntu-bug: Call apport-kde instead of apport-qt.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 04 Aug 2009 18:50:26 +0100

apport (1.6-0ubuntu2) karmic; urgency=low

  * Re-enable Apport by default, for the alpha-3 release.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 21 Jul 2009 00:44:50 +0200

apport (1.6-0ubuntu1) karmic; urgency=low

  * New upstream release:
    - Add support for kernel crashes, thanks to Michael Vogt!
    - apport/ui.py, run_crash(): Do not re-collect information if we already
      have a Dependencies field. This happens when calling apport on an already
      pre-processed .crash file with -c. (LP: #394497)
    - apport/hookutils.py, pci_devices(): Deliver all matching devices, not
      just the last one. (LP: #398906)
    - hookutils.py, _get_module_license(): Return "invalid" if modinfo fails,
      so that they do not count as "free". (LP: #341720)
    - packaging-apt-dpkg.py: Support additional custom native origins in
      /etc/apport/native-origins.d/ . (LP: #386052)