@@ -2,8 +2,11 @@ apport (1.7-0ubuntu2) UNRELEASED; urgency=low
 
   * data/general-hooks/ubuntu.py: Detect when a kernel upgrade failure is
     caused by update-grub failing, and file the bug on grub instead of linux
+  * data/general-hooks/ubuntu.py: Detect when a kernel upgrade failure is
+    caused by update-initramfs failing, and file the bug on initramfs-tools
+    instead of linux
 
- -- Matt Zimmerman <mdz@ubuntu.com>  Thu, 06 Aug 2009 12:41:32 +0100
+ -- Matt Zimmerman <mdz@ubuntu.com>  Thu, 06 Aug 2009 13:18:27 +0100
 
 apport (1.7-0ubuntu1) karmic; urgency=low
 
